# snapdeck

./: .gitignore  README.md  pyproject.toml  snapdeck.py
docs/: index.html
